5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1716_2497.log
== TEST (2019-05-09 16:23:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:27:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:27:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora
while()

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 9
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:28:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora
	while()

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 9
    while()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:29:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora
	while()

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 9
    while()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
tempo = 0
	while(tempo < Mes):
		Lucro = Valor * 0.4

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 8
    while(tempo < Mes):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
tempo = 0
while(tempo < Mes):
		Lucro = Valor * 0.4

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 18
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
tempo = 0
while(tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 21
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:33:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
tempo = 0
while(tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.180923
-- ERROR:
  File "/home/codebench/codes/1716/2497/main.py", line 21
    t = ????
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
tempo = 0
while(tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 21
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
tempo = 0
while(tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Tempo = Tempo + 1
NameError: name 'Tempo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(tempo < Mes):
NameError: name 'tempo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
805.35
1127.49
1578.49
2209.88
3093.83
4331.37
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:34:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- EXECUTION TIME:
0.120664
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
805.35
1127.49
1578.49
2209.88
3093.83
4331.37
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1155.56
1617.78
2264.9
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1785.91
2500.27
3500.38
4900.54
6860.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
805.35
1127.49
1578.49
2209.88
3093.83
4331.37
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:15) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
805.35
1127.49
1578.49
2209.88
3093.83
4331.37
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:36:17) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- EXECUTION TIME:
0.160881
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
805.35
1127.49
1578.49
2209.88
3093.83
4331.37
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1155.56
1617.78
2264.9
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1785.91
2500.27
3500.38
4900.54
6860.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:17) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.4
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
805.35
1127.49
1578.49
2209.88
3093.83
4331.37
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:40) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:36:42) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- EXECUTION TIME:
0.309461
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:56) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:39:00) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:39:31) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:41:22) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:42:29) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:42:44) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:43:04) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:43:19) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:43:37) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:51:39) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))





	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
